crates/aif-html/tests/snapshots/render_html__render_list.snap
---
source: crates/aif-html/tests/render_html.rs
expression: html
---
<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <title></title>
</head>
<body>
<ul><li>item one</li><li>item two</li><li>item three</li></ul>
</body>
</html>
